--- a/public/manifest.json
+++ b/public/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-24",
+          "title": "🎮 游戏行业速递 - 2025年10月24日",
+          "summary": "🎮 游戏行业速递 2025年10月24日 欧洲游戏行业结构性危机：AI驱动的人才分层与创意岗位生存挑战 分类： 市场分析 来源： GameLook 、 游戏陀螺 核心洞察： 欧洲游戏行业正经历一场由AI技术加速的结构性重组，形成了鲜明的「上...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/24.md"
+        },
+        {
           "date": "2025-10-23",
           "title": "🎮 游戏行业速递 - 2025年10月23日",
           "summary": "🎮 游戏行业速递 2025年10月23日 Steam市场两极分化危机：40%游戏收入不足上架费，5%头部游戏主导收益 分类： 市场分析 来源： GameLook 、 游戏陀螺 核心洞察： Steam平台的极端收入分化揭示了数字游戏分发的根本...",
