--- a/public/manifest.json
+++ b/public/manifest.json
@@ -440,6 +440,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-24",
+          "title": "🤖 AI行业速递 - 2025年10月24日",
+          "summary": "🤖 AI行业速递 2025年10月24日 Meta AI战略大转向：600人裁员波及FAIR与田渊栋团队，标志基础研究向产品导向转变 分类： 市场动态 来源： 量子位 、 机器之心 核心洞察： Meta此次大规模AI部门重组揭示了当前AI巨...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/24.md"
+        },
+        {
           "date": "2025-10-23",
           "title": "🤖 AI行业速递 - 2025年10月23日",
           "summary": "🤖 AI行业速递 2025年10月23日 PaddleOCR VL: 0.9B参数量的专业OCR模型如何击败GPT 4o与通用大模型 分类： 技术前沿解读 来源： 数字生命卡兹克 、 开源星探 核心洞察： PaddleOCR VL的成功标志...",
