--- a/public/manifest.json
+++ b/public/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-27",
+          "title": "🎮 游戏行业速递 - 2025年10月27日",
+          "summary": "🎮 游戏行业速递 2025年10月27日 《王者荣耀》十周年：从1.39亿日活到国民级文化平台的进化之路 分类： 产品情报 来源： GameLook 、 游戏葡萄 、 游戏那点事Gamez 核心洞察： 《王者荣耀》十年成功的核心在于其完成了...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/27.md"
+        },
+        {
           "date": "2025-10-24",
           "title": "🎮 游戏行业速递 - 2025年10月24日",
           "summary": "🎮 游戏行业速递 2025年10月24日 欧洲游戏行业结构性危机：AI驱动的人才分层与创意岗位生存挑战 分类： 市场分析 来源： GameLook 、 游戏陀螺 核心洞察： 欧洲游戏行业正经历一场由AI技术加速的结构性重组，形成了鲜明的「上...",
