docs(content): Update AI daily report for 2025-10-27

--- a/manifest.json
+++ b/manifest.json
@@ -450,6 +450,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-27",
+          "title": "🤖 AI行业速递 - 2025年10月27日",
+          "summary": "🤖 AI行业速递 2025年10月27日 OpenAI推出「公司知识」功能：ChatGPT企业版基于GPT 5实现多源数据检索与知识管理 分类： 产品与商业模式 来源： 赛博禅心 、 极客公园 核心洞察： OpenAI「公司知识」功能的推出...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/27.md"
+        },
+        {
           "date": "2025-10-24",
           "title": "🤖 AI行业速递 - 2025年10月24日",
           "summary": "🤖 AI行业速递 2025年10月24日 Meta AI战略大转向：600人裁员波及FAIR与田渊栋团队，标志基础研究向产品导向转变 分类： 市场动态 来源： 量子位 、 机器之心 核心洞察： Meta此次大规模AI部门重组揭示了当前AI巨...",
