docs(content): Update GAME daily report for 2025-10-28

--- a/manifest.json
+++ b/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-28",
+          "title": "🎮 游戏行业速递 - 2025年10月28日",
+          "summary": "🎮 游戏行业速递 2025年10月28日 《王者荣耀》十周年：从MOBA游戏到全域IP生态系统的战略蜕变 分类： 产品情报 来源： GameLook 、 游戏茶馆 核心洞察： 《王者荣耀》十年成功的核心在于实现了从单一游戏产品到全域IP生态...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/28.md"
+        },
+        {
           "date": "2025-10-27",
           "title": "🎮 游戏行业速递 - 2025年10月27日",
           "summary": "🎮 游戏行业速递 2025年10月27日 《王者荣耀》十周年：从1.39亿日活到国民级文化平台的进化之路 分类： 产品情报 来源： GameLook 、 游戏葡萄 、 游戏那点事Gamez 核心洞察： 《王者荣耀》十年成功的核心在于其完成了...",
