docs(content): Update AI daily report for 2025-10-28

--- a/manifest.json
+++ b/manifest.json
@@ -460,6 +460,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-28",
+          "title": "🤖 AI行业速递 - 2025年10月28日",
+          "summary": "🤖 AI行业速递 2025年10月28日 美韩AI战略联盟：HBM内存垄断与Stargate项目引领全球AI供应链重构 分类： 深度行业分析 来源： 赛博禅心 核心洞察： 美韩AI战略联盟的形成揭示了全球AI产业链正在经历的根本性转变：从「...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/28.md"
+        },
+        {
           "date": "2025-10-27",
           "title": "🤖 AI行业速递 - 2025年10月27日",
           "summary": "🤖 AI行业速递 2025年10月27日 OpenAI推出「公司知识」功能：ChatGPT企业版基于GPT 5实现多源数据检索与知识管理 分类： 产品与商业模式 来源： 赛博禅心 、 极客公园 核心洞察： OpenAI「公司知识」功能的推出...",
