docs(content): Update GAME daily report for 2025-10-29

--- a/manifest.json
+++ b/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-29",
+          "title": "🎮 游戏行业速递 - 2025年10月29日",
+          "summary": "🎮 游戏行业速递 2025年10月29日 《二重螺旋》：颠覆二游抽卡传统，开创「全角色免费+外观付费」商业新模式 分类： 产品情报 来源： GameLook 、 游戏动力 、 游戏那点事Gamez 核心洞察： 《二重螺旋》对二游商业模式的革...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/29.md"
+        },
+        {
           "date": "2025-10-28",
           "title": "🎮 游戏行业速递 - 2025年10月28日",
           "summary": "🎮 游戏行业速递 2025年10月28日 《王者荣耀》十周年：从MOBA游戏到全域IP生态系统的战略蜕变 分类： 产品情报 来源： GameLook 、 游戏茶馆 核心洞察： 《王者荣耀》十年成功的核心在于实现了从单一游戏产品到全域IP生态...",
