--- a/public/manifest.json
+++ b/public/manifest.json
@@ -470,6 +470,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-29",
+          "title": "🤖 AI行业速递 - 2025年10月29日",
+          "summary": "🤖 AI行业速递 2025年10月29日 OpenAI重组完成：1300亿美元估值、万亿级算力投资与2028年AI研究员自动化路线图 分类： 市场动态 来源： 赛博禅心 、 数字生命卡兹克 、 机器之心 核心洞察： OpenAI的资本重组与...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/29.md"
+        },
+        {
           "date": "2025-10-28",
           "title": "🤖 AI行业速递 - 2025年10月28日",
           "summary": "🤖 AI行业速递 2025年10月28日 美韩AI战略联盟：HBM内存垄断与Stargate项目引领全球AI供应链重构 分类： 深度行业分析 来源： 赛博禅心 核心洞察： 美韩AI战略联盟的形成揭示了全球AI产业链正在经历的根本性转变：从「...",
