--- a/public/manifest.json
+++ b/public/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-30",
+          "title": "🎮 游戏行业速递 - 2025年10月30日",
+          "summary": "🎮 游戏行业速递 2025年10月30日 《恋与深空》「直到心跳沸腾」：舞台卡创新重塑恋爱游戏体验，技术驱动全球市场突围 分类： 产品情报 来源： 游戏那点事Gamez 、 游戏茶馆 核心洞察： 《恋与深空》的「舞台卡」创新揭示了恋爱游戏赛...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/30.md"
+        },
+        {
           "date": "2025-10-29",
           "title": "🎮 游戏行业速递 - 2025年10月29日",
           "summary": "🎮 游戏行业速递 2025年10月29日 《二重螺旋》：颠覆二游抽卡传统，开创「全角色免费+外观付费」商业新模式 分类： 产品情报 来源： GameLook 、 游戏动力 、 游戏那点事Gamez 核心洞察： 《二重螺旋》对二游商业模式的革...",
