docs(content): Update AI daily report for 2025-10-30

--- a/manifest.json
+++ b/manifest.json
@@ -480,6 +480,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-30",
+          "title": "🤖 AI行业速递 - 2025年10月30日",
+          "summary": "🤖 AI行业速递 2025年10月30日 Cursor 2.0战略升级：自研Composer模型提速400%与多智能体架构，从API调用工具到AI原生开发平台的关键转型 分类： 产品与商业模式 来源： 机器之心 、 量子位 、 有机大橘子 ...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/30.md"
+        },
+        {
           "date": "2025-10-29",
           "title": "🤖 AI行业速递 - 2025年10月29日",
           "summary": "🤖 AI行业速递 2025年10月29日 OpenAI重组完成：1300亿美元估值、万亿级算力投资与2028年AI研究员自动化路线图 分类： 市场动态 来源： 赛博禅心 、 数字生命卡兹克 、 机器之心 核心洞察： OpenAI的资本重组与...",
