docs(content): Update GAME daily report for 2025-10-31

--- a/manifest.json
+++ b/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-31",
+          "title": "🎮 游戏行业速递 - 2025年10月31日",
+          "summary": "🎮 游戏行业速递 2025年10月31日 《望月》全面重做：诗悦网络600人团队押注中国都市开放世界，背水一战的差异化突围 分类： 产品情报 来源： GameLook 、 游戏那点事Gamez 、 触乐 、 游戏新知 核心洞察： 《望月》的...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/31.md"
+        },
+        {
           "date": "2025-10-30",
           "title": "🎮 游戏行业速递 - 2025年10月30日",
           "summary": "🎮 游戏行业速递 2025年10月30日 《恋与深空》「直到心跳沸腾」：舞台卡创新重塑恋爱游戏体验，技术驱动全球市场突围 分类： 产品情报 来源： 游戏那点事Gamez 、 游戏茶馆 核心洞察： 《恋与深空》的「舞台卡」创新揭示了恋爱游戏赛...",
