--- a/public/manifest.json
+++ b/public/manifest.json
@@ -196,7 +196,7 @@
         {
           "date": "2025-10-31",
           "title": "🎮 游戏行业速递 - 2025年10月31日",
-          "summary": "🎮 游戏行业速递 2025年10月31日 《望月》全面重做：诗悦网络600人团队押注中国都市开放世界，背水一战的差异化突围 分类： 产品情报 来源： GameLook 、 游戏那点事Gamez 、 触乐 、 游戏新知 核心洞察： 《望月》的...",
+          "summary": "🎮 游戏行业速递 2025年10月31日 《望月》全面重塑：诗悦网络600人团队打造的中国都市开放世界豪赌 分类： 产品情报 来源： GameLook 、 游戏那点事Gamez 、 触乐 、 游戏新知 核心洞察： 《望月》的全面重做揭示了中...",
           "tags": [
             "Game",
             "Daily"
