--- a/public/manifest.json
+++ b/public/manifest.json
@@ -490,6 +490,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-31",
+          "title": "🤖 AI行业速递 - 2025年10月31日",
+          "summary": "🤖 AI行业速递 2025年10月31日 智源悟界·Emu3.5：首个原生世界建模多模态大模型，融合自回归与扩散优势 分类： 技术前沿解读 来源： 机器之心 核心洞察： 智源悟界·Emu3.5的突破性意义在于它打破了多模态模型发展的既有范式...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/31.md"
+        },
+        {
           "date": "2025-10-30",
           "title": "🤖 AI行业速递 - 2025年10月30日",
           "summary": "🤖 AI行业速递 2025年10月30日 Cursor 2.0战略升级：自研Composer模型提速400%与多智能体架构，从API调用工具到AI原生开发平台的关键转型 分类： 产品与商业模式 来源： 机器之心 、 量子位 、 有机大橘子 ...",
