docs(content): Update GAME daily report for 2025-11-03

--- a/manifest.json
+++ b/manifest.json
@@ -363,6 +363,18 @@
           ],
           "url": "game/2025/10/10.md"
         }
+      ],
+      "2025-11": [
+        {
+          "date": "2025-11-03",
+          "title": "🎮 游戏行业速递 - 2025年11月03日",
+          "summary": "🎮 游戏行业速递 2025年11月03日 《逃离鸭科夫》：5人小团队如何通过友善革命重塑搜打撤品类，实现12天破亿的黑马奇迹 分类： 产品情报 来源： 游戏葡萄 、 触乐 、 游戏那点事Gamez 核心洞察： 《逃离鸭科夫》的成功揭示了游戏...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/03.md"
+        }
       ]
     },
     "ai": {
