--- a/manifest.json
+++ b/manifest.json
@@ -671,6 +671,18 @@
           ],
           "url": "ai/2025/10/10.md"
         }
+      ],
+      "2025-11": [
+        {
+          "date": "2025-11-03",
+          "title": "🤖 AI行业速递 - 2025年11月03日",
+          "summary": "🤖 AI行业速递 2025年11月03日 OpenAI重组与微软深度绑定：1.4万亿算力战略背后的商业模式重构与价值链重塑 分类： 深度行业分析 来源： 机器之心 、 量子位 核心洞察： OpenAI与微软的深度绑定已演变为一种战略性「共生...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/03.md"
+        }
       ]
     }
   }
