docs(content): Update GAME daily report for 2025-11-04

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-04",
+          "title": "🎮 游戏行业速递 - 2025年11月04日",
+          "summary": "🎮 游戏行业速递 2025年11月04日 《二重螺旋》：刷宝玩法与商业模式革新引发的行业争议 分类： 产品情报 来源： 游戏陀螺 核心洞察： 《二重螺旋》通过解绑二游与角色抽卡的传统商业模式，开创了一种全新的游戏内容驱动与变现机制，这一「潘...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/04.md"
+        },
+        {
           "date": "2025-11-03",
           "title": "🎮 游戏行业速递 - 2025年11月03日",
           "summary": "🎮 游戏行业速递 2025年11月03日 《逃离鸭科夫》：5人小团队如何通过友善革命重塑搜打撤品类，实现12天破亿的黑马奇迹 分类： 产品情报 来源： 游戏葡萄 、 触乐 、 游戏那点事Gamez 核心洞察： 《逃离鸭科夫》的成功揭示了游戏...",
