docs(content): Update AI daily report for 2025-11-04

--- a/manifest.json
+++ b/manifest.json
@@ -684,6 +684,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-04",
+          "title": "🤖 AI行业速递 - 2025年11月04日",
+          "summary": "🤖 AI行业速递 2025年11月04日 OpenAI与AWS签署380亿美元算力协议：多云战略布局与AI产业基础设施竞争新格局 分类： 市场动态 来源： 极客公园 、 机器之心 核心洞察： OpenAI与AWS的380亿美元合作协议揭示了...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/04.md"
+        },
+        {
           "date": "2025-11-03",
           "title": "🤖 AI行业速递 - 2025年11月03日",
           "summary": "🤖 AI行业速递 2025年11月03日 OpenAI重组与微软深度绑定：1.4万亿算力战略背后的商业模式重构与价值链重塑 分类： 深度行业分析 来源： 机器之心 、 量子位 核心洞察： OpenAI与微软的深度绑定已演变为一种战略性「共生...",
