docs(content): Update GAME daily report for 2025-11-05

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-05",
+          "title": "🎮 游戏行业速递 - 2025年11月05日",
+          "summary": "🎮 游戏行业速递 2025年11月05日 《欧陆风云5》：P社史上最复杂历史策略游戏的野心与突破 分类： 产品情报 来源： 游戏研究社 核心洞察： 《欧陆风云5》通过「机制联动」而非「机制堆砌」实现了战略游戏的突破性进化，将经济、政治、军事...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/05.md"
+        },
+        {
           "date": "2025-11-04",
           "title": "🎮 游戏行业速递 - 2025年11月04日",
           "summary": "🎮 游戏行业速递 2025年11月04日 《二重螺旋》：刷宝玩法与商业模式革新引发的行业争议 分类： 产品情报 来源： 游戏陀螺 核心洞察： 《二重螺旋》通过解绑二游与角色抽卡的传统商业模式，开创了一种全新的游戏内容驱动与变现机制，这一「潘...",
