--- a/manifest.json
+++ b/manifest.json
@@ -694,6 +694,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-05",
+          "title": "🤖 AI行业速递 - 2025年11月05日",
+          "summary": "🤖 AI行业速递 2025年11月05日 AI加密货币交易大赛：中国模型Qwen和DeepSeek盈利领先，美系模型全线亏损，揭示AI金融决策能力新分化 分类： 产品与商业模式 来源： 机器之心 、 量子位 、 赛博禅心 核心洞察： 这场A...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/05.md"
+        },
+        {
           "date": "2025-11-04",
           "title": "🤖 AI行业速递 - 2025年11月04日",
           "summary": "🤖 AI行业速递 2025年11月04日 OpenAI与AWS签署380亿美元算力协议：多云战略布局与AI产业基础设施竞争新格局 分类： 市场动态 来源： 极客公园 、 机器之心 核心洞察： OpenAI与AWS的380亿美元合作协议揭示了...",
