--- a/public/manifest.json
+++ b/public/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-06",
+          "title": "🎮 游戏行业速递 - 2025年11月06日",
+          "summary": "🎮 游戏行业速递 2025年11月06日 从南美逃亡到700亿流水：Rockstar Games创始人Dan Houser首次深度访谈解密 分类： 公司动态 来源： 游戏葡萄 核心洞察： Dan Houser的访谈揭示了AAA级游戏创作背后...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/06.md"
+        },
+        {
           "date": "2025-11-05",
           "title": "🎮 游戏行业速递 - 2025年11月05日",
           "summary": "🎮 游戏行业速递 2025年11月05日 《欧陆风云5》：P社史上最复杂历史策略游戏的野心与突破 分类： 产品情报 来源： 游戏研究社 核心洞察： 《欧陆风云5》通过「机制联动」而非「机制堆砌」实现了战略游戏的突破性进化，将经济、政治、军事...",
