--- a/public/manifest.json
+++ b/public/manifest.json
@@ -704,6 +704,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-06",
+          "title": "🤖 AI行业速递 - 2025年11月06日",
+          "summary": "🤖 AI行业速递 2025年11月06日 OpenAI商业化转折点：Altman反击财务质疑、万亿估值IPO传闻与AI产业泡沫风险 分类： 深度行业分析 来源： 极客公园 、 36氪 核心洞察： OpenAI的财务争议与IPO传闻标志着AI...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/06.md"
+        },
+        {
           "date": "2025-11-05",
           "title": "🤖 AI行业速递 - 2025年11月05日",
           "summary": "🤖 AI行业速递 2025年11月05日 AI加密货币交易大赛：中国模型Qwen和DeepSeek盈利领先，美系模型全线亏损，揭示AI金融决策能力新分化 分类： 产品与商业模式 来源： 机器之心 、 量子位 、 赛博禅心 核心洞察： 这场A...",
