docs(content): Update GAME daily report for 2025-11-07

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-07",
+          "title": "🎮 游戏行业速递 - 2025年11月07日",
+          "summary": "🎮 游戏行业速递 2025年11月07日 轻量化SLG：出海市场的增长引擎与「轻量不轻浅」的产品策略 分类： 市场分析 来源： GameLook 、 游戏葡萄 核心洞察： 轻量化SLG的成功揭示了游戏出海的新范式：不是简单地降低游戏深度，而...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/07.md"
+        },
+        {
           "date": "2025-11-06",
           "title": "🎮 游戏行业速递 - 2025年11月06日",
           "summary": "🎮 游戏行业速递 2025年11月06日 从南美逃亡到700亿流水：Rockstar Games创始人Dan Houser首次深度访谈解密 分类： 公司动态 来源： 游戏葡萄 核心洞察： Dan Houser的访谈揭示了AAA级游戏创作背后...",
