docs(content): Update AI daily report for 2025-11-07

--- a/manifest.json
+++ b/manifest.json
@@ -714,6 +714,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-07",
+          "title": "🤖 AI行业速递 - 2025年11月07日",
+          "summary": "🤖 AI行业速递 2025年11月07日 Kimi K2 Thinking发布：300步工具调用超越GPT 5，开源底座+API商业化双轨战略引领国产Agent新赛道 分类： 技术前沿解读 来源： 量子位 、 赛博禅心 、 歸藏的AI工具箱...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/07.md"
+        },
+        {
           "date": "2025-11-06",
           "title": "🤖 AI行业速递 - 2025年11月06日",
           "summary": "🤖 AI行业速递 2025年11月06日 OpenAI商业化转折点：Altman反击财务质疑、万亿估值IPO传闻与AI产业泡沫风险 分类： 深度行业分析 来源： 极客公园 、 36氪 核心洞察： OpenAI的财务争议与IPO传闻标志着AI...",
