docs(content): Update GAME daily report for 2025-11-10

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-10",
+          "title": "🎮 游戏行业速递 - 2025年11月10日",
+          "summary": "🎮 游戏行业速递 2025年11月10日 《崩坏：星穹铁道》翁法罗斯篇章：昔涟的时间闭环与自我牺牲，长线叙事的情感共鸣突破 分类： 产品情报 来源： 游戏茶馆 、 游民星空 核心洞察： 《崩坏：星穹铁道》翁法罗斯篇章展现了二次元游戏叙事的进...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/10.md"
+        },
+        {
           "date": "2025-11-07",
           "title": "🎮 游戏行业速递 - 2025年11月07日",
           "summary": "🎮 游戏行业速递 2025年11月07日 轻量化SLG：出海市场的增长引擎与「轻量不轻浅」的产品策略 分类： 市场分析 来源： GameLook 、 游戏葡萄 核心洞察： 轻量化SLG的成功揭示了游戏出海的新范式：不是简单地降低游戏深度，而...",
