--- a/public/manifest.json
+++ b/public/manifest.json
@@ -724,6 +724,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-10",
+          "title": "🤖 AI行业速递 - 2025年11月10日",
+          "summary": "🤖 AI行业速递 2025年11月10日 HuggingFace发布200页LLM训练实战指南：从决策到落地的全流程工程实践 分类： 技术前沿解读 来源： 机器之心 核心洞察： HuggingFace这份200页实战指南的核心价值不在于提供...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/10.md"
+        },
+        {
           "date": "2025-11-07",
           "title": "🤖 AI行业速递 - 2025年11月07日",
           "summary": "🤖 AI行业速递 2025年11月07日 Kimi K2 Thinking发布：300步工具调用超越GPT 5，开源底座+API商业化双轨战略引领国产Agent新赛道 分类： 技术前沿解读 来源： 量子位 、 赛博禅心 、 歸藏的AI工具箱...",
