docs(content): Update GAME daily report for 2025-11-11

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-11",
+          "title": "🎮 游戏行业速递 - 2025年11月11日",
+          "summary": "🎮 游戏行业速递 2025年11月11日 《三角洲行动》第七赛季：爆发式增长后的双轨战略，如何平衡硬核与休闲玩家需求 分类： 产品情报 来源： 游戏新知 、 游戏动力 核心洞察： 《三角洲行动》在用户规模爆发式增长后面临的核心挑战是如何同时...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/11.md"
+        },
+        {
           "date": "2025-11-10",
           "title": "🎮 游戏行业速递 - 2025年11月10日",
           "summary": "🎮 游戏行业速递 2025年11月10日 《崩坏：星穹铁道》翁法罗斯篇章：昔涟的时间闭环与自我牺牲，长线叙事的情感共鸣突破 分类： 产品情报 来源： 游戏茶馆 、 游民星空 核心洞察： 《崩坏：星穹铁道》翁法罗斯篇章展现了二次元游戏叙事的进...",
