--- a/public/manifest.json
+++ b/public/manifest.json
@@ -368,7 +368,7 @@
         {
           "date": "2025-11-11",
           "title": "🎮 游戏行业速递 - 2025年11月11日",
-          "summary": "🎮 游戏行业速递 2025年11月11日 《三角洲行动》第七赛季：爆发式增长后的双轨战略，如何平衡硬核与休闲玩家需求 分类： 产品情报 来源： 游戏新知 、 游戏动力 核心洞察： 《三角洲行动》在用户规模爆发式增长后面临的核心挑战是如何同时...",
+          "summary": "🎮 游戏行业速递 2025年11月11日 《三角洲行动》S7赛季升级：从爆发增长到全方位优化，如何平衡硬核与休闲玩家需求 分类： 产品情报 来源： 游戏新知 、 游戏动力 核心洞察： 《三角洲行动》的成功演进揭示了射击游戏在规模爆发后的关键...",
           "tags": [
             "Game",
             "Daily"
