docs(content): Update AI daily report for 2025-11-11

--- a/manifest.json
+++ b/manifest.json
@@ -734,6 +734,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-11",
+          "title": "🤖 AI行业速递 - 2025年11月11日",
+          "summary": "🤖 AI行业速递 2025年11月11日 李飞飞提出空间智能：AI范式从语言理解转向世界模型，重塑人机交互本质 分类： 观点洞察 来源： 量子位 、 机器之心 核心洞察： 李飞飞提出的「空间智能」框架标志着AI发展的根本性范式转变——从「语...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/11.md"
+        },
+        {
           "date": "2025-11-10",
           "title": "🤖 AI行业速递 - 2025年11月10日",
           "summary": "🤖 AI行业速递 2025年11月10日 HuggingFace发布200页LLM训练实战指南：从决策到落地的全流程工程实践 分类： 技术前沿解读 来源： 机器之心 核心洞察： HuggingFace这份200页实战指南的核心价值不在于提供...",
