docs(content): Update GAME daily report for 2025-11-12

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-12",
+          "title": "🎮 游戏行业速递 - 2025年11月12日",
+          "summary": "🎮 游戏行业速递 2025年11月12日 《明日方舟：终末地》三测蜕变：鹰角九个月的极致重塑与次世代野心 分类： 产品情报 来源： 游戏那点事Gamez 、 游戏葡萄 核心洞察： 《明日方舟：终末地》的开发历程揭示了鹰角在面对首款大型3D游...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/12.md"
+        },
+        {
           "date": "2025-11-11",
           "title": "🎮 游戏行业速递 - 2025年11月11日",
           "summary": "🎮 游戏行业速递 2025年11月11日 《三角洲行动》S7赛季升级：从爆发增长到全方位优化，如何平衡硬核与休闲玩家需求 分类： 产品情报 来源： 游戏新知 、 游戏动力 核心洞察： 《三角洲行动》的成功演进揭示了射击游戏在规模爆发后的关键...",
