--- a/public/manifest.json
+++ b/public/manifest.json
@@ -744,6 +744,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-12",
+          "title": "🤖 AI行业速递 - 2025年11月12日",
+          "summary": "🤖 AI行业速递 2025年11月12日 图灵奖得主Yann LeCun离职Meta：开源理念与商业战略冲突引发市值蒸发，折射AI行业学术与商业张力 分类： 市场动态 来源： 机器之心 、 量子位 核心洞察： LeCun离职事件揭示了AI领...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/12.md"
+        },
+        {
           "date": "2025-11-11",
           "title": "🤖 AI行业速递 - 2025年11月11日",
           "summary": "🤖 AI行业速递 2025年11月11日 李飞飞提出空间智能：AI范式从语言理解转向世界模型，重塑人机交互本质 分类： 观点洞察 来源： 量子位 、 机器之心 核心洞察： 李飞飞提出的「空间智能」框架标志着AI发展的根本性范式转变——从「语...",
