--- a/public/manifest.json
+++ b/public/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-13",
+          "title": "🎮 游戏行业速递 - 2025年11月13日",
+          "summary": "🎮 游戏行业速递 2025年11月13日 《解限机》从高期待到市场失利：西山居公开反思与重构计划，寻求玩家共建挽救颓势 分类： 产品情报 来源： 游戏葡萄 、 游戏茶馆 核心洞察： 《解限机》的市场失利揭示了国产中重度游戏开发中的结构性问题...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/13.md"
+        },
+        {
           "date": "2025-11-12",
           "title": "🎮 游戏行业速递 - 2025年11月12日",
           "summary": "🎮 游戏行业速递 2025年11月12日 《明日方舟：终末地》三测蜕变：鹰角九个月的极致重塑与次世代野心 分类： 产品情报 来源： 游戏那点事Gamez 、 游戏葡萄 核心洞察： 《明日方舟：终末地》的开发历程揭示了鹰角在面对首款大型3D游...",
