--- a/public/manifest.json
+++ b/public/manifest.json
@@ -754,6 +754,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-13",
+          "title": "🤖 AI行业速递 - 2025年11月13日",
+          "summary": "🤖 AI行业速递 2025年11月13日 GPT 5.1发布：OpenAI转向情感智能与自适应推理，从技术竞赛迈向人性化交互体验 分类： 产品与商业模式 来源： 赛博禅心 、 量子位 、 机器之心 核心洞察： GPT 5.1的发布标志着Op...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/13.md"
+        },
+        {
           "date": "2025-11-12",
           "title": "🤖 AI行业速递 - 2025年11月12日",
           "summary": "🤖 AI行业速递 2025年11月12日 图灵奖得主Yann LeCun离职Meta：开源理念与商业战略冲突引发市值蒸发，折射AI行业学术与商业张力 分类： 市场动态 来源： 机器之心 、 量子位 核心洞察： LeCun离职事件揭示了AI领...",
