--- a/public/manifest.json
+++ b/public/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-14",
+          "title": "🎮 游戏行业速递 - 2025年11月14日",
+          "summary": "🎮 游戏行业速递 2025年11月14日 苹果与腾讯达成微信小游戏15%分成协议：平台博弈新格局与小游戏行业重构 分类： 行业政策与环境 来源： 游戏茶馆 、 DataEye游戏观察 、 触乐 、 游戏陀螺 核心洞察： 苹果与腾讯的这一协议...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/14.md"
+        },
+        {
           "date": "2025-11-13",
           "title": "🎮 游戏行业速递 - 2025年11月13日",
           "summary": "🎮 游戏行业速递 2025年11月13日 《解限机》从高期待到市场失利：西山居公开反思与重构计划，寻求玩家共建挽救颓势 分类： 产品情报 来源： 游戏葡萄 、 游戏茶馆 核心洞察： 《解限机》的市场失利揭示了国产中重度游戏开发中的结构性问题...",
