docs(content): Update AI daily report for 2025-11-14

--- a/manifest.json
+++ b/manifest.json
@@ -764,6 +764,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-14",
+          "title": "🤖 AI行业速递 - 2025年11月14日",
+          "summary": "🤖 AI行业速递 2025年11月14日 文心5.0发布：2.4万亿参数原生全模态架构引领大模型技术范式转变，挑战GPT 5与Gemini 2.5 分类： 技术前沿解读 来源： 赛博禅心 、 量子位 、 机器之心 核心洞察： 文心5.0的发...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/14.md"
+        },
+        {
           "date": "2025-11-13",
           "title": "🤖 AI行业速递 - 2025年11月13日",
           "summary": "🤖 AI行业速递 2025年11月13日 GPT 5.1发布：OpenAI转向情感智能与自适应推理，从技术竞赛迈向人性化交互体验 分类： 产品与商业模式 来源： 赛博禅心 、 量子位 、 机器之心 核心洞察： GPT 5.1的发布标志着Op...",
