--- a/public/manifest.json
+++ b/public/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-17",
+          "title": "🎮 游戏行业速递 - 2025年11月17日",
+          "summary": "🎮 游戏行业速递 2025年11月17日 「再见翁法罗斯」：《崩坏：星穹铁道》玩家自发二创从接龙到万平展会的社区奇迹 分类： 产品情报 来源： GameRes游资网 、 游戏那点事Gamez 、 游戏葡萄 核心洞察： 「再见翁法罗斯」现象展...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/17.md"
+        },
+        {
           "date": "2025-11-14",
           "title": "🎮 游戏行业速递 - 2025年11月14日",
           "summary": "🎮 游戏行业速递 2025年11月14日 苹果与腾讯达成微信小游戏15%分成协议：平台博弈新格局与小游戏行业重构 分类： 行业政策与环境 来源： 游戏茶馆 、 DataEye游戏观察 、 触乐 、 游戏陀螺 核心洞察： 苹果与腾讯的这一协议...",
