--- a/public/manifest.json
+++ b/public/manifest.json
@@ -774,6 +774,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-17",
+          "title": "🤖 AI行业速递 - 2025年11月17日",
+          "summary": "🤖 AI行业速递 2025年11月17日 Gamma：52人团队重构PPT创作流程，年入1亿美元的AI原生演示工具如何实现「以小搏大」 分类： 产品与商业模式 来源： 量子位 、 Founder Park 核心洞察： Gamma的成功揭示了...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/17.md"
+        },
+        {
           "date": "2025-11-14",
           "title": "🤖 AI行业速递 - 2025年11月14日",
           "summary": "🤖 AI行业速递 2025年11月14日 文心5.0发布：2.4万亿参数原生全模态架构引领大模型技术范式转变，挑战GPT 5与Gemini 2.5 分类： 技术前沿解读 来源： 赛博禅心 、 量子位 、 机器之心 核心洞察： 文心5.0的发...",
