docs(content): Update GAME daily report for 2025-11-18

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-18",
+          "title": "🎮 游戏行业速递 - 2025年11月18日",
+          "summary": "🎮 游戏行业速递 2025年11月18日 《燕云十六声》海外爆火：网易武侠游戏如何通过创新MMO模式与文化自信实现全球突围 分类： 产品情报 来源： GameLook 、 游戏那点事Gamez 、 游戏葡萄 核心洞察： 《燕云十六声》的全球...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/18.md"
+        },
+        {
           "date": "2025-11-17",
           "title": "🎮 游戏行业速递 - 2025年11月17日",
           "summary": "🎮 游戏行业速递 2025年11月17日 「再见翁法罗斯」：《崩坏：星穹铁道》玩家自发二创从接龙到万平展会的社区奇迹 分类： 产品情报 来源： GameRes游资网 、 游戏那点事Gamez 、 游戏葡萄 核心洞察： 「再见翁法罗斯」现象展...",
