docs(content): Update AI daily report for 2025-11-18

--- a/manifest.json
+++ b/manifest.json
@@ -784,6 +784,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-18",
+          "title": "🤖 AI行业速递 - 2025年11月18日",
+          "summary": "🤖 AI行业速递 2025年11月18日 Grok 4.1发布：RLHF技术突破与智能体奖励模型创新，xAI从性能竞赛转向用户体验差异化 分类： 产品与商业模式 来源： 量子位 、 机器之心 核心洞察： Grok 4.1的突破性进展揭示了大...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/18.md"
+        },
+        {
           "date": "2025-11-17",
           "title": "🤖 AI行业速递 - 2025年11月17日",
           "summary": "🤖 AI行业速递 2025年11月17日 Gamma：52人团队重构PPT创作流程，年入1亿美元的AI原生演示工具如何实现「以小搏大」 分类： 产品与商业模式 来源： 量子位 、 Founder Park 核心洞察： Gamma的成功揭示了...",
