--- a/public/manifest.json
+++ b/public/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-19",
+          "title": "🎮 游戏行业速递 - 2025年11月19日",
+          "summary": "🎮 游戏行业速递 2025年11月19日 TGA 2025提名揭晓：《光与影》创纪录领跑，中国游戏影响力与全球话语权博弈 分类： 市场分析 来源： 游戏葡萄 、 游民星空 、 游戏那点事Gamez 、 游戏动力 核心洞察： TGA 2025...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/19.md"
+        },
+        {
           "date": "2025-11-18",
           "title": "🎮 游戏行业速递 - 2025年11月18日",
           "summary": "🎮 游戏行业速递 2025年11月18日 《燕云十六声》海外爆火：网易武侠游戏如何通过创新MMO模式与文化自信实现全球突围 分类： 产品情报 来源： GameLook 、 游戏那点事Gamez 、 游戏葡萄 核心洞察： 《燕云十六声》的全球...",
