docs(content): Update AI daily report for 2025-11-19

--- a/manifest.json
+++ b/manifest.json
@@ -794,6 +794,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-19",
+          "title": "🤖 AI行业速递 - 2025年11月19日",
+          "summary": "🤖 AI行业速递 2025年11月19日 Gemini 3发布：断层领先的性能指标与全栈整合战略，谷歌重塑AI格局与开发范式 分类： 产品与商业模式 来源： 极客公园 、 36氪 、 数字生命卡兹克 、 机器之心 、 歸藏的AI工具箱 、 ...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/19.md"
+        },
+        {
           "date": "2025-11-18",
           "title": "🤖 AI行业速递 - 2025年11月18日",
           "summary": "🤖 AI行业速递 2025年11月18日 Grok 4.1发布：RLHF技术突破与智能体奖励模型创新，xAI从性能竞赛转向用户体验差异化 分类： 产品与商业模式 来源： 量子位 、 机器之心 核心洞察： Grok 4.1的突破性进展揭示了大...",
