docs(content): Update GAME daily report for 2025-11-20

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-20",
+          "title": "🎮 游戏行业速递 - 2025年11月20日",
+          "summary": "🎮 游戏行业速递 2025年11月20日 Unity与Epic Games历史性战略合作：从竞争对手到生态伙伴，共建开放互联的游戏未来 分类： 技术前沿 来源： 游戏葡萄 、 游戏那点事Gamez 、 游戏茶馆 、 游戏新知 核心洞察： U...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/20.md"
+        },
+        {
           "date": "2025-11-19",
           "title": "🎮 游戏行业速递 - 2025年11月19日",
           "summary": "🎮 游戏行业速递 2025年11月19日 TGA 2025提名揭晓：《光与影》创纪录领跑，中国游戏影响力与全球话语权博弈 分类： 市场分析 来源： 游戏葡萄 、 游民星空 、 游戏那点事Gamez 、 游戏动力 核心洞察： TGA 2025...",
