docs(content): Update AI daily report for 2025-11-20

--- a/manifest.json
+++ b/manifest.json
@@ -804,6 +804,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-20",
+          "title": "🤖 AI行业速递 - 2025年11月20日",
+          "summary": "🤖 AI行业速递 2025年11月20日 Second Me：AI分身社交如何重构数字身份与解决现代社交困境 分类： 产品与商业模式 来源： 数字生命卡兹克 、 赛博禅心 、 有机大橘子 核心洞察： Second Me代表了一种从「工具性A...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/20.md"
+        },
+        {
           "date": "2025-11-19",
           "title": "🤖 AI行业速递 - 2025年11月19日",
           "summary": "🤖 AI行业速递 2025年11月19日 Gemini 3发布：断层领先的性能指标与全栈整合战略，谷歌重塑AI格局与开发范式 分类： 产品与商业模式 来源： 极客公园 、 36氪 、 数字生命卡兹克 、 机器之心 、 歸藏的AI工具箱 、 ...",
