--- a/public/manifest.json
+++ b/public/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-21",
+          "title": "🎮 游戏行业速递 - 2025年11月21日",
+          "summary": "🎮 游戏行业速递 2025年11月21日 《Varsapura》：米哈游与蔡浩宇的写实开放世界新征程，从失败中重塑的技术与创新野心 分类： 产品情报 来源： 游戏葡萄 、 游戏新知 核心洞察： 《Varsapura》项目不仅是米哈游的产品矩...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/21.md"
+        },
+        {
           "date": "2025-11-20",
           "title": "🎮 游戏行业速递 - 2025年11月20日",
           "summary": "🎮 游戏行业速递 2025年11月20日 Unity与Epic Games历史性战略合作：从竞争对手到生态伙伴，共建开放互联的游戏未来 分类： 技术前沿 来源： 游戏葡萄 、 游戏那点事Gamez 、 游戏茶馆 、 游戏新知 核心洞察： U...",
