docs(content): Update AI daily report for 2025-11-21

--- a/manifest.json
+++ b/manifest.json
@@ -814,6 +814,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-21",
+          "title": "🤖 AI行业速递 - 2025年11月21日",
+          "summary": "🤖 AI行业速递 2025年11月21日 谷歌Nano Banana Pro发布：多模态融合、知识增强与专业控制的AI图像生成新标杆 分类： 产品与商业模式 来源： 卡尔的霍格沃茨 、 歸藏的AI工具箱 、 量子位 、 赛博禅心 、 机器之...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/21.md"
+        },
+        {
           "date": "2025-11-20",
           "title": "🤖 AI行业速递 - 2025年11月20日",
           "summary": "🤖 AI行业速递 2025年11月20日 Second Me：AI分身社交如何重构数字身份与解决现代社交困境 分类： 产品与商业模式 来源： 数字生命卡兹克 、 赛博禅心 、 有机大橘子 核心洞察： Second Me代表了一种从「工具性A...",
