docs(content): Update GAME daily report for 2025-11-24

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-24",
+          "title": "🎮 游戏行业速递 - 2025年11月24日",
+          "summary": "🎮 游戏行业速递 2025年11月24日 《Varsapura》首曝：米哈游的超写实二次元突破与虚拟世界野心 分类： 产品情报 来源： GameLook 、 触乐 、 GameRes游资网 核心洞察： 《Varsapura》代表了二次元游戏...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/24.md"
+        },
+        {
           "date": "2025-11-21",
           "title": "🎮 游戏行业速递 - 2025年11月21日",
           "summary": "🎮 游戏行业速递 2025年11月21日 《Varsapura》：米哈游与蔡浩宇的写实开放世界新征程，从失败中重塑的技术与创新野心 分类： 产品情报 来源： 游戏葡萄 、 游戏新知 核心洞察： 《Varsapura》项目不仅是米哈游的产品矩...",
