--- a/public/manifest.json
+++ b/public/manifest.json
@@ -824,6 +824,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-24",
+          "title": "🤖 AI行业速递 - 2025年11月24日",
+          "summary": "🤖 AI行业速递 2025年11月24日 Nano Banana Pro：谷歌基于Gemini 3的图像生成新标杆，从推理驱动到搜索增强重塑创意工作流 分类： 产品与商业模式 来源： 歸藏的AI工具箱 、 有机大橘子 、 夕小瑶科技说 、 ...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/24.md"
+        },
+        {
           "date": "2025-11-21",
           "title": "🤖 AI行业速递 - 2025年11月21日",
           "summary": "🤖 AI行业速递 2025年11月21日 谷歌Nano Banana Pro发布：多模态融合、知识增强与专业控制的AI图像生成新标杆 分类： 产品与商业模式 来源： 卡尔的霍格沃茨 、 歸藏的AI工具箱 、 量子位 、 赛博禅心 、 机器之...",
