docs(content): Update GAME daily report for 2025-11-25

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-25",
+          "title": "🎮 游戏行业速递 - 2025年11月25日",
+          "summary": "🎮 游戏行业速递 2025年11月25日 《燕云十六声》成为Steam同时在线人数最高的中国游戏，海外市场口碑与销量双丰收 分类： 产品情报 来源： GameLook 核心洞察： 《燕云十六声》的海外成功不仅打破了「中国游戏出海难」的刻板印...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/25.md"
+        },
+        {
           "date": "2025-11-24",
           "title": "🎮 游戏行业速递 - 2025年11月24日",
           "summary": "🎮 游戏行业速递 2025年11月24日 《Varsapura》首曝：米哈游的超写实二次元突破与虚拟世界野心 分类： 产品情报 来源： GameLook 、 触乐 、 GameRes游资网 核心洞察： 《Varsapura》代表了二次元游戏...",
