docs(content): Update AI daily report for 2025-11-25

--- a/manifest.json
+++ b/manifest.json
@@ -834,6 +834,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-25",
+          "title": "🤖 AI行业速递 - 2025年11月25日",
+          "summary": "🤖 AI行业速递 2025年11月25日 Claude Opus 4.5发布：编程能力超越人类工程师，API定价降低67%，智能体能力与全栈生态布局并进 分类： 产品与商业模式 来源： 赛博禅心 、 量子位 、 机器之心 核心洞察： Cla...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/25.md"
+        },
+        {
           "date": "2025-11-24",
           "title": "🤖 AI行业速递 - 2025年11月24日",
           "summary": "🤖 AI行业速递 2025年11月24日 Nano Banana Pro：谷歌基于Gemini 3的图像生成新标杆，从推理驱动到搜索增强重塑创意工作流 分类： 产品与商业模式 来源： 歸藏的AI工具箱 、 有机大橘子 、 夕小瑶科技说 、 ...",
