docs(content): Update GAME daily report for 2025-11-26

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-26",
+          "title": "🎮 游戏行业速递 - 2025年11月26日",
+          "summary": "🎮 游戏行业速递 2025年11月26日 《太吾绘卷》牵手鸿蒙：华为全场景游戏生态的战略突破与国产独立游戏新出路 分类： 技术前沿 来源： GameLook 、 游戏葡萄 核心洞察： 《太吾绘卷》与鸿蒙的战略联盟揭示了一种新兴的平台 内容关...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/26.md"
+        },
+        {
           "date": "2025-11-25",
           "title": "🎮 游戏行业速递 - 2025年11月25日",
           "summary": "🎮 游戏行业速递 2025年11月25日 《燕云十六声》成为Steam同时在线人数最高的中国游戏，海外市场口碑与销量双丰收 分类： 产品情报 来源： GameLook 核心洞察： 《燕云十六声》的海外成功不仅打破了「中国游戏出海难」的刻板印...",
