--- a/public/manifest.json
+++ b/public/manifest.json
@@ -844,6 +844,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-26",
+          "title": "🤖 AI行业速递 - 2025年11月26日",
+          "summary": "🤖 AI行业速递 2025年11月26日 Ilya Sutskever重磅观点：AI进入研究新纪元，持续学习能力将成超级智能关键 分类： 观点洞察 来源： 深思圈 、 量子位 核心洞察： Ilya Sutskever的观点标志着AI发展战略...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/26.md"
+        },
+        {
           "date": "2025-11-25",
           "title": "🤖 AI行业速递 - 2025年11月25日",
           "summary": "🤖 AI行业速递 2025年11月25日 Claude Opus 4.5发布：编程能力超越人类工程师，API定价降低67%，智能体能力与全栈生态布局并进 分类： 产品与商业模式 来源： 赛博禅心 、 量子位 、 机器之心 核心洞察： Cla...",
