--- a/public/manifest.json
+++ b/public/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-27",
+          "title": "🎮 游戏行业速递 - 2025年11月27日",
+          "summary": "🎮 游戏行业速递 2025年11月27日 《无限暖暖》2.0版本：从争议到逆袭，叠纸的开放世界换装冒险实现市场突围 分类： 产品情报 来源： 游戏葡萄 、 游戏茶馆 核心洞察： 《无限暖暖》2.0版本的成功逆袭揭示了一个关键行业启示：在游戏...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/27.md"
+        },
+        {
           "date": "2025-11-26",
           "title": "🎮 游戏行业速递 - 2025年11月26日",
           "summary": "🎮 游戏行业速递 2025年11月26日 《太吾绘卷》牵手鸿蒙：华为全场景游戏生态的战略突破与国产独立游戏新出路 分类： 技术前沿 来源： GameLook 、 游戏葡萄 核心洞察： 《太吾绘卷》与鸿蒙的战略联盟揭示了一种新兴的平台 内容关...",
