--- a/public/manifest.json
+++ b/public/manifest.json
@@ -854,6 +854,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-27",
+          "title": "🤖 AI行业速递 - 2025年11月27日",
+          "summary": "🤖 AI行业速递 2025年11月27日 谷歌双线进击：Gemini 3模型与TPU芯片本地化战略挑战英伟达霸权，市值飙升逼近4万亿 分类： 市场动态 来源： 机器之心 、 量子位 核心洞察： 谷歌正通过「软硬协同」战略从AI追赶者转变为全...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/27.md"
+        },
+        {
           "date": "2025-11-26",
           "title": "🤖 AI行业速递 - 2025年11月26日",
           "summary": "🤖 AI行业速递 2025年11月26日 Ilya Sutskever重磅观点：AI进入研究新纪元，持续学习能力将成超级智能关键 分类： 观点洞察 来源： 深思圈 、 量子位 核心洞察： Ilya Sutskever的观点标志着AI发展战略...",
