docs(content): Update GAME daily report for 2025-11-28

--- a/manifest.json
+++ b/manifest.json
@@ -366,6 +366,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-28",
+          "title": "🎮 游戏行业速递 - 2025年11月28日",
+          "summary": "🎮 游戏行业速递 2025年11月28日 沙特游戏帝国扩张：字节跳动沐瞳科技出售案的战略意义与合规挑战 分类： 公司动态 来源： GameLook 、 游民星空 、 游戏茶馆 核心洞察： 沙特对沐瞳的收购意向揭示了全球游戏产业正在经历的双重...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/11/28.md"
+        },
+        {
           "date": "2025-11-27",
           "title": "🎮 游戏行业速递 - 2025年11月27日",
           "summary": "🎮 游戏行业速递 2025年11月27日 《无限暖暖》2.0版本：从争议到逆袭，叠纸的开放世界换装冒险实现市场突围 分类： 产品情报 来源： 游戏葡萄 、 游戏茶馆 核心洞察： 《无限暖暖》2.0版本的成功逆袭揭示了一个关键行业启示：在游戏...",
