docs(content): Update AI daily report for 2025-11-28

--- a/manifest.json
+++ b/manifest.json
@@ -864,6 +864,16 @@
       ],
       "2025-11": [
         {
+          "date": "2025-11-28",
+          "title": "🤖 AI行业速递 - 2025年11月28日",
+          "summary": "🤖 AI行业速递 2025年11月28日 DeepSeekMath V2：开源IMO金牌级数学模型，自验证推理架构引领AI从结果导向到过程验证的范式转变 分类： 技术前沿解读 来源： 量子位 、 数字生命卡兹克 、 机器之心 核心洞察： D...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/11/28.md"
+        },
+        {
           "date": "2025-11-27",
           "title": "🤖 AI行业速递 - 2025年11月27日",
           "summary": "🤖 AI行业速递 2025年11月27日 谷歌双线进击：Gemini 3模型与TPU芯片本地化战略挑战英伟达霸权，市值飙升逼近4万亿 分类： 市场动态 来源： 机器之心 、 量子位 核心洞察： 谷歌正通过「软硬协同」战略从AI追赶者转变为全...",
