docs(content): Update GAME daily report for 2025-12-01

--- a/manifest.json
+++ b/manifest.json
@@ -565,6 +565,18 @@
           ],
           "url": "game/2025/11/03.md"
         }
+      ],
+      "2025-12": [
+        {
+          "date": "2025-12-01",
+          "title": "🎮 游戏行业速递 - 2025年12月01日",
+          "summary": "🎮 游戏行业速递 2025年12月01日 《王者荣耀》S42匹配机制重大变革：从算法主导到玩家共创的运营新模式 分类： 产品情报 来源： 游戏新知 、 GameRes游资网 核心洞察： 《王者荣耀》匹配机制改革揭示了成熟MOBA游戏运营的两...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/12/01.md"
+        }
       ]
     },
     "ai": {
