--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1075,6 +1075,18 @@
           ],
           "url": "ai/2025/11/03.md"
         }
+      ],
+      "2025-12": [
+        {
+          "date": "2025-12-01",
+          "title": "🤖 AI行业速递 - 2025年12月01日",
+          "summary": "🤖 AI行业速递 2025年12月01日 ChatGPT三周年：从技术里程碑到范式转移，AI生成时代重构产业与个人发展路径 分类： 观点洞察 来源： 有机大橘子 、 赛博禅心 核心洞察： ChatGPT三周年不仅是技术里程碑的纪念，更标志着...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/12/01.md"
+        }
       ]
     }
   }
