docs(content): Update GAME daily report for 2025-12-02

--- a/manifest.json
+++ b/manifest.json
@@ -570,7 +570,7 @@
         {
           "date": "2025-12-02",
           "title": "🎮 游戏行业速递 - 2025年12月02日",
-          "summary": "🎮 游戏行业速递 2025年12月02日 郭炜炜卸任西山居CEO转任首席制作人：《解限机》失利后的产品突围与组织重构 分类： 公司动态 来源： GameLook 、 游戏新知 核心洞察： 郭炜炜从CEO回归制作人的转变，揭示了游戏行业面临产...",
+          "summary": "🎮 游戏行业速递 2025年12月02日 西山居战略转型：郭炜炜从CEO回归首席制作人，管理与创作分离背后的产品导向战略 分类： 公司动态 来源： 游民星空 、 游戏茶馆 、 游戏新知 、 游戏陀螺 、 游戏葡萄 核心洞察： 西山居的这次高...",
           "tags": [
             "Game",
             "Daily"
