--- a/public/manifest.json
+++ b/public/manifest.json
@@ -568,6 +568,16 @@
       ],
       "2025-12": [
         {
+          "date": "2025-12-03",
+          "title": "🎮 游戏行业速递 - 2025年12月03日",
+          "summary": "🎮 游戏行业速递 2025年12月03日 《海默2000》：一人三年铸就94%好评，一款「注定没有好结局」的悲情游戏背后的创作哲学 分类： 产品情报 来源： 游戏新知 核心洞察： 《海默2000》的成功揭示了独立游戏创作的一条另类路径：不依...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/12/03.md"
+        },
+        {
           "date": "2025-12-02",
           "title": "🎮 游戏行业速递 - 2025年12月02日",
           "summary": "🎮 游戏行业速递 2025年12月02日 西山居战略转型：郭炜炜从CEO回归首席制作人，管理与创作分离背后的产品导向战略 分类： 公司动态 来源： 游民星空 、 游戏茶馆 、 游戏新知 、 游戏陀螺 、 游戏葡萄 核心洞察： 西山居的这次高...",
