docs(content): Update AI daily report for 2025-12-03

--- a/manifest.json
+++ b/manifest.json
@@ -1098,6 +1098,16 @@
       ],
       "2025-12": [
         {
+          "date": "2025-12-03",
+          "title": "🤖 AI行业速递 - 2025年12月03日",
+          "summary": "🤖 AI行业速递 2025年12月03日 Mistral 3全线开源：欧洲AI巨头以Apache 2.0许可对标中国模型，揭示全球AI竞争新格局 分类： 产品与商业模式 来源： 赛博禅心 、 机器之心 核心洞察： Mistral 3系列的发...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/12/03.md"
+        },
+        {
           "date": "2025-12-02",
           "title": "🤖 AI行业速递 - 2025年12月02日",
           "summary": "🤖 AI行业速递 2025年12月02日 DeepSeek V3.2系列发布：首创思考与工具调用融合，DSA稀疏注意力机制实现推理能力媲美GPT 5 分类： 技术前沿解读 来源： 极客公园 、 有机大橘子 、 夕小瑶科技说 、 赛博禅心 、...",
